--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## GitHub template ------------------------
+
 # History files
 .Rhistory
 .Rapp.history
@@ -47,3 +49,26 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+
+## emilopezcano template -----------------------
+
+## Reports output files 
+##  -- add any other locations if needed
+##  -- For keeping desired files, add, e.g., !<filename.docx>
+reports/*html
+reports/*_files
+reports/*docx
+reports/*pdf
+
+## Folder OS specific info
+**/.DS_Store
+**/desktop.ini
+
+## MS Office lock files
+**/~$*
+
+## Large files 
+##  -- include large files that my result in GitHub errors
+
+
